regression/fail/modules.21.sml
structure S: sig val x: bool end =
   struct
      val x = 13
   end
